--- a/src/Views/ly3.fxml
+++ b/src/Views/ly3.fxml
@@ -7,11 +7,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="653.0" prefWidth="386.0" xmlns="http://javafx.com/javafx/" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerPause">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="653.0" prefWidth="386.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerPause">
    <children>
       <VBox alignment="CENTER" prefHeight="660.0" prefWidth="386.0">
          <children>
-            <Button fx:id="continueB" alignment="CENTER" mnemonicParsing="false" prefHeight="102.0" prefWidth="206.0" text="Continue">
+            <Button fx:id="continueB" alignment="CENTER" mnemonicParsing="false" onAction="#continueB" prefHeight="102.0" prefWidth="206.0" text="Continue">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
