--- a/src/Views/ly2.fxml
+++ b/src/Views/ly2.fxml
@@ -13,13 +13,13 @@
 
 <AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="653.0" prefWidth="386.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerGame">
    <children>
-      <VBox alignment="TOP_CENTER" prefHeight="660.0" prefWidth="386.0">
+      <VBox alignment="TOP_CENTER" prefHeight="660.0" prefWidth="386.0" style="-fx-background-color: black;">
          <children>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                <children>
                   <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <Button fx:id="pause" alignment="TOP_CENTER" mnemonicParsing="false" onAction="#pause" text="Pause" />
+                        <Button fx:id="pause" alignment="TOP_CENTER" mnemonicParsing="false" onAction="#pause" style="-fx-background-color: yellow;" text="Pause" />
                      </children>
                      <HBox.margin>
                         <Insets left="20.0" />
@@ -66,7 +66,7 @@
                   <Insets top="60.0" />
                </VBox.margin>
             </HBox>
-            <GridPane fx:id="gridPane" alignment="TOP_CENTER" prefHeight="300.0" prefWidth="300.0">
+            <GridPane fx:id="gridPane" alignment="CENTER" maxWidth="1.7976931348623157E308" minHeight="300.0" minWidth="300.0" prefHeight="300.0" prefWidth="300.0">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -82,8 +82,11 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                </VBox.margin>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
             </GridPane>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                <children>
