--- a/src/Views/ly2.fxml
+++ b/src/Views/ly2.fxml
@@ -6,18 +6,17 @@
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="653.0" prefWidth="386.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerGame">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: Black;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerGame">
    <children>
-      <VBox alignment="TOP_CENTER" prefHeight="660.0" prefWidth="386.0" style="-fx-background-color: black;">
+      <VBox alignment="TOP_CENTER" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
          <children>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+            <HBox alignment="CENTER">
                <children>
-                  <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+                  <HBox alignment="CENTER_LEFT">
                      <children>
                         <Button fx:id="pause" alignment="TOP_CENTER" mnemonicParsing="false" onAction="#pause" style="-fx-background-color: yellow;" text="Pause" />
                      </children>
@@ -25,7 +24,7 @@
                         <Insets left="20.0" />
                      </HBox.margin>
                   </HBox>
-                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                  <HBox alignment="CENTER">
                      <children>
                         <ImageView fitHeight="82.0" fitWidth="59.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -37,7 +36,7 @@
                         </ImageView>
                      </children>
                   </HBox>
-                  <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0">
+                  <HBox alignment="CENTER_RIGHT">
                      <children>
                         <VBox prefHeight="200.0" prefWidth="100.0">
                            <children>
@@ -85,9 +84,9 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
             </GridPane>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+            <HBox alignment="CENTER">
                <children>
-                  <ToggleButton fx:id="bomb" alignment="CENTER" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="bomb">
+                  <ToggleButton fx:id="bomb" alignment="CENTER" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: yellow;" text="bomb">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -95,7 +94,7 @@
                         <Insets right="150.0" />
                      </HBox.margin>
                   </ToggleButton>
-                  <Button fx:id="undo" alignment="CENTER" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="undo">
+                  <Button fx:id="undo" alignment="CENTER" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: yellow;" text="undo">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
