--- a/src/Views/ly4.fxml
+++ b/src/Views/ly4.fxml
@@ -4,18 +4,16 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="653.0" prefWidth="386.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerEndGame">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerEndGame">
    <children>
-      <VBox alignment="TOP_CENTER" prefHeight="653.0" prefWidth="386.0">
+      <VBox alignment="TOP_CENTER" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
          <children>
-            <Label fx:id="marvelous" text="MARVELOUS!">
+            <Label fx:id="marvelous" text="MARVELOUS!" textFill="RED">
                <VBox.margin>
                   <Insets top="40.0" />
                </VBox.margin>
@@ -23,7 +21,7 @@
                   <Font size="35.0" />
                </font>
             </Label>
-            <Label text="SCORE">
+            <Label text="SCORE" textFill="RED">
                <VBox.margin>
                   <Insets top="10.0" />
                </VBox.margin>
@@ -36,17 +34,9 @@
                   <Insets left="150.0" right="150.0" top="10.0" />
                </VBox.margin>
             </TextField>
-            <ImageView fitHeight="237.0" fitWidth="294.0" pickOnBounds="true" preserveRatio="true">
-               <VBox.margin>
-                  <Insets top="20.0" />
-               </VBox.margin>
-               <image>
-                  <Image url="@../../../../Pictures/MEmu%20Photo/Screenshots/Screenshot_2019-03-27-17-58-26%20(2).png" />
-               </image>
-            </ImageView>
-            <HBox alignment="CENTER" prefHeight="141.0" prefWidth="386.0">
+            <HBox alignment="CENTER">
                <children>
-                  <Button fx:id="score" alignment="CENTER" mnemonicParsing="false" onAction="#score" prefHeight="50.0" prefWidth="50.0" text="Score">
+                  <Button fx:id="score" alignment="CENTER" mnemonicParsing="false" onAction="#score" prefHeight="80.0" prefWidth="150.0" style="-fx-background-color: yellow;" text="Score">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -54,7 +44,7 @@
                         <Insets right="10.0" />
                      </HBox.margin>
                   </Button>
-                  <Button fx:id="restart" alignment="CENTER" mnemonicParsing="false" onAction="#restart" prefHeight="50.0" prefWidth="150.0" text="Restart">
+                  <Button fx:id="restart" alignment="CENTER" mnemonicParsing="false" onAction="#restart" prefHeight="80.0" prefWidth="150.0" style="-fx-background-color: yellow;" text="Restart">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -62,7 +52,7 @@
                         <Insets left="10.0" right="10.0" />
                      </HBox.margin>
                   </Button>
-                  <Button alignment="CENTER" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" text="star">
+                  <Button alignment="CENTER" mnemonicParsing="false" prefHeight="80.0" prefWidth="150.0" style="-fx-background-color: yellow;" text="star">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -72,13 +62,16 @@
                   </Button>
                </children>
                <VBox.margin>
-                  <Insets />
+                  <Insets top="20.0" />
                </VBox.margin>
             </HBox>
-            <Button fx:id="mainMenu" alignment="CENTER" mnemonicParsing="false" onAction="#mainMenu" prefHeight="50.0" prefWidth="100.0" text="Main Menu">
+            <Button fx:id="mainMenu" alignment="CENTER" mnemonicParsing="false" onAction="#mainMenu" prefHeight="80.0" prefWidth="150.0" style="-fx-background-color: yellow;" text="Main Menu">
                <opaqueInsets>
                   <Insets bottom="30.0" />
                </opaqueInsets>
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
             </Button>
          </children>
       </VBox>
