--- a/src/Views/ly5.fxml
+++ b/src/Views/ly5.fxml
@@ -6,21 +6,25 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="586.0" prefWidth="301.0" xmlns="http://javafx.com/javafx/" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Controllerback">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Controllerback">
    <children>
       <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label text="SCORE">
+            <Label text="SCORE" textFill="RED">
                <padding>
                   <Insets bottom="20.0" />
                </padding>
+               <font>
+                  <Font size="24.0" />
+               </font>
             </Label>
-            <TextArea fx:id="textArea" prefHeight="200.0" prefWidth="200.0">
+            <TextArea fx:id="textArea">
                <VBox.margin>
                   <Insets left="20.0" right="20.0" />
                </VBox.margin></TextArea>
-            <Button fx:id="mainMenu" mnemonicParsing="false" onAction="#mainMenu" text="Main Menu">
+            <Button fx:id="mainMenu" mnemonicParsing="false" onAction="#mainMenu" style="-fx-background-color: yellow;" text="Main Menu">
                <VBox.margin>
                   <Insets top="20.0" />
                </VBox.margin>
