--- a/src/Views/ly6.fxml
+++ b/src/Views/ly6.fxml
@@ -10,11 +10,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerSettings">
+<AnchorPane fx:id="anchorPane" style="-fx-background-color: Black;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerSettings">
    <children>
-      <VBox alignment="TOP_CENTER" prefHeight="660.0" prefWidth="386.0" AnchorPane.topAnchor="0.0">
+      <VBox alignment="TOP_CENTER" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
          <children>
-            <Label text="Settings">
+            <Label text="Settings" textFill="RED">
                <VBox.margin>
                   <Insets top="50.0" />
                </VBox.margin>
@@ -22,7 +22,7 @@
                   <Font size="39.0" />
                </font>
             </Label>
-            <MenuButton fx:id="gridSize" mnemonicParsing="false" text="Grid SIze">
+            <MenuButton fx:id="gridSize" mnemonicParsing="false" style="-fx-background-color: yellow;" text="Grid SIze">
               <items>
                 <MenuItem mnemonicParsing="false" text="Row">
                      <graphic>
@@ -40,12 +40,12 @@
                   <Insets top="30.0" />
                </VBox.margin>
             </MenuButton>
-            <Button fx:id="apply" mnemonicParsing="false" text="Apply">
+            <Button fx:id="apply" mnemonicParsing="false" style="-fx-background-color: yellow;" text="Apply">
                <VBox.margin>
                   <Insets top="20.0" />
                </VBox.margin>
             </Button>
-            <Button fx:id="mainMenu" mnemonicParsing="false" onAction="#mainMenu" text="Main Menu">
+            <Button fx:id="mainMenu" mnemonicParsing="false" onAction="#mainMenu" style="-fx-background-color: yellow;" text="Main Menu">
                <VBox.margin>
                   <Insets top="20.0" />
                </VBox.margin>
