--- a/src/Views/ly2.fxml
+++ b/src/Views/ly2.fxml
@@ -4,13 +4,14 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: Black;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerGame">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../Design.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerGame">
    <children>
       <VBox alignment="TOP_CENTER" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
          <children>
@@ -18,23 +19,30 @@
                <children>
                   <HBox alignment="CENTER_LEFT">
                      <children>
-                        <Button fx:id="pause" alignment="TOP_CENTER" mnemonicParsing="false" onAction="#pause" style="-fx-background-color: yellow;" text="Pause" />
+                        <Button fx:id="pause" alignment="TOP_CENTER" mnemonicParsing="false" onAction="#pause">
+                           <graphic>
+                              <ImageView fitHeight="50.0" fitWidth="50.0">
+                                 <image>
+                                    <Image url="@icon/icons8_pause_100px_1.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic></Button>
                      </children>
                      <HBox.margin>
                         <Insets left="20.0" />
                      </HBox.margin>
                   </HBox>
-                  <HBox alignment="CENTER">
+                  <HBox alignment="TOP_CENTER">
                      <children>
-                        <ImageView fitHeight="82.0" fitWidth="59.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="141.0" fitWidth="141.0">
                            <image>
-                              <!--<Image url="@../../../../Pictures/MEmu%20Photo/Screenshots/Screenshot_2019-03-27-17-58-26%20(2).png" />-->
+                              <Image url="@icon/air.com.thumbspire.get13.png" />
                            </image>
-                           <HBox.margin>
-                              <Insets />
-                           </HBox.margin>
                         </ImageView>
                      </children>
+                     <HBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </HBox.margin>
                   </HBox>
                   <HBox alignment="CENTER_RIGHT">
                      <children>
@@ -42,7 +50,11 @@
                            <children>
                               <HBox prefHeight="100.0" prefWidth="200.0">
                                  <children>
-                                    <Label text="Money" textFill="WHITE" />
+                                    <ImageView fitHeight="50.0" fitWidth="50.0">
+                                       <image>
+                                          <Image url="@icon/icons8_money_100px_1.png" />
+                                       </image>
+                                    </ImageView>
                                     <Label fx:id="moneyField" text="moneyField" textFill="WHITE">
                                        <opaqueInsets>
                                           <Insets />
@@ -54,7 +66,11 @@
                               </HBox>
                               <HBox prefHeight="100.0" prefWidth="200.0">
                                  <children>
-                                    <Label text="Level" textFill="WHITE" />
+                                    <ImageView fitHeight="50.0" fitWidth="50.0">
+                                       <image>
+                                          <Image url="@icon/icons8_Long_Arrow_Up_100px_1.png" />
+                                       </image>
+                                    </ImageView>
                                     <Label fx:id="levelField" text="levelField" textFill="WHITE">
                                        <HBox.margin>
                                           <Insets left="5.0" />
@@ -86,18 +102,32 @@
             </GridPane>
             <HBox alignment="CENTER">
                <children>
-                  <ToggleButton fx:id="bomb" alignment="CENTER" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: yellow;" text="bomb">
+                  <ToggleButton fx:id="bomb" alignment="CENTER" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
                      <HBox.margin>
                         <Insets right="150.0" />
                      </HBox.margin>
+                     <graphic>
+                        <ImageView fitHeight="50.0" fitWidth="50.0">
+                           <image>
+                              <Image url="@icon/icons8_flash_bang_48px_1.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
                   </ToggleButton>
-                  <Button fx:id="undo" alignment="CENTER" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" style="-fx-background-color: yellow;" text="undo">
+                  <Button fx:id="undo" alignment="CENTER" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
+                     <graphic>
+                        <ImageView fitHeight="50.0" fitWidth="50.0">
+                           <image>
+                              <Image url="@icon/icons8_undo_100px.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
                   </Button>
                </children>
             </HBox>
