--- a/src/Views/ly4.fxml
+++ b/src/Views/ly4.fxml
@@ -3,13 +3,14 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerEndGame">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../Design.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerEndGame">
    <children>
       <VBox alignment="TOP_CENTER" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
          <children>
@@ -28,51 +29,64 @@
                <font>
                   <Font size="19.0" />
                </font>
+               <graphic>
+                  <ImageView>
+                     <image>
+                        <Image url="@icon/icons8_star_100px_1.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </Label>
-            <TextField alignment="CENTER" text="NUMBER">
-               <VBox.margin>
-                  <Insets left="150.0" right="150.0" top="10.0" />
-               </VBox.margin>
-            </TextField>
+            <Label fx:id="labelScore" text="NUMBER" textFill="WHITE" />
             <HBox alignment="CENTER">
                <children>
-                  <Button fx:id="score" alignment="CENTER" mnemonicParsing="false" onAction="#score" prefHeight="80.0" prefWidth="150.0" style="-fx-background-color: yellow;" text="Score">
+                  <Button fx:id="score" alignment="CENTER" mnemonicParsing="false" onAction="#score" prefHeight="80.0" prefWidth="150.0" text="Score">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
                      <HBox.margin>
                         <Insets right="10.0" />
                      </HBox.margin>
+                     <graphic>
+                        <ImageView>
+                           <image>
+                              <Image url="@icon/icons8_winner_document_100px.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
                   </Button>
-                  <Button fx:id="restart" alignment="CENTER" mnemonicParsing="false" onAction="#restart" prefHeight="80.0" prefWidth="150.0" style="-fx-background-color: yellow;" text="Restart">
+                  <Button fx:id="mainMenu" alignment="CENTER" mnemonicParsing="false" onAction="#mainMenu" prefHeight="80.0" prefWidth="150.0" text="Main Menu">
+                     <opaqueInsets>
+                        <Insets bottom="30.0" />
+                     </opaqueInsets>
+                     <graphic>
+                        <ImageView>
+                           <image>
+                              <Image url="@icon/icons8_menu_2_100px.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Button fx:id="restart" alignment="CENTER" mnemonicParsing="false" onAction="#restart" prefHeight="80.0" prefWidth="150.0" text="Restart">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
                      <HBox.margin>
                         <Insets left="10.0" right="10.0" />
                      </HBox.margin>
-                  </Button>
-                  <Button alignment="CENTER" mnemonicParsing="false" prefHeight="80.0" prefWidth="150.0" style="-fx-background-color: yellow;" text="star">
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                     <HBox.margin>
-                        <Insets left="10.0" />
-                     </HBox.margin>
+                     <graphic>
+                        <ImageView>
+                           <image>
+                              <Image url="@icon/icons8_restart_100px.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
                   </Button>
                </children>
                <VBox.margin>
                   <Insets top="20.0" />
                </VBox.margin>
             </HBox>
-            <Button fx:id="mainMenu" alignment="CENTER" mnemonicParsing="false" onAction="#mainMenu" prefHeight="80.0" prefWidth="150.0" style="-fx-background-color: yellow;" text="Main Menu">
-               <opaqueInsets>
-                  <Insets bottom="30.0" />
-               </opaqueInsets>
-               <VBox.margin>
-                  <Insets top="20.0" />
-               </VBox.margin>
-            </Button>
          </children>
       </VBox>
    </children>
