--- a/src/Views/ly6.fxml
+++ b/src/Views/ly6.fxml
@@ -6,11 +6,13 @@
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Slider?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" style="-fx-background-color: Black;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerSettings">
+<AnchorPane fx:id="anchorPane" stylesheets="@../Design.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerSettings">
    <children>
       <VBox alignment="TOP_CENTER" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
          <children>
@@ -21,14 +23,21 @@
                <font>
                   <Font size="39.0" />
                </font>
+               <graphic>
+                  <ImageView>
+                     <image>
+                        <Image url="@icon/icons8_settings_100px_1.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </Label>
-            <MenuButton fx:id="gridSize" mnemonicParsing="false" style="-fx-background-color: yellow;" text="Grid SIze">
+            <MenuButton fx:id="gridSize" mnemonicParsing="false" text="Grid Size">
               <items>
-                <MenuItem mnemonicParsing="false" text="Row">
+                <MenuItem fx:id="changeRow" mnemonicParsing="false" text="Row">
                      <graphic>
                         <Slider min="3.0" />
                      </graphic></MenuItem>
-                <MenuItem mnemonicParsing="false" text="Column">
+                <MenuItem fx:id="changeColumn" mnemonicParsing="false" text="Column">
                      <graphic>
                         <Slider min="3.0" />
                      </graphic></MenuItem>
@@ -39,16 +48,37 @@
                <VBox.margin>
                   <Insets top="30.0" />
                </VBox.margin>
+               <graphic>
+                  <ImageView>
+                     <image>
+                        <Image url="@icon/icons8_grid_100px.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </MenuButton>
-            <Button fx:id="apply" mnemonicParsing="false" style="-fx-background-color: yellow;" text="Apply">
+            <Button fx:id="apply" mnemonicParsing="false" text="Apply">
                <VBox.margin>
                   <Insets top="20.0" />
                </VBox.margin>
+               <graphic>
+                  <ImageView>
+                     <image>
+                        <Image url="@icon/icons8_ok_100px.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </Button>
-            <Button fx:id="mainMenu" mnemonicParsing="false" onAction="#mainMenu" style="-fx-background-color: yellow;" text="Main Menu">
+            <Button fx:id="mainMenu" mnemonicParsing="false" onAction="#mainMenu" text="Main Menu">
                <VBox.margin>
                   <Insets top="20.0" />
                </VBox.margin>
+               <graphic>
+                  <ImageView>
+                     <image>
+                        <Image url="@icon/icons8_menu_2_100px.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </Button>
          </children>
       </VBox>
