--- a/src/Views/ly3.fxml
+++ b/src/Views/ly3.fxml
@@ -11,7 +11,7 @@
    <children>
       <VBox alignment="CENTER" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
          <children>
-            <Button fx:id="continueB" alignment="CENTER" mnemonicParsing="false" onAction="#continueB" prefHeight="80.0" prefWidth="150.0" stylesheets="@../Design.css" text="Continue">
+            <Button fx:id="continueB" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" onAction="#continueB" prefHeight="80.0" prefWidth="150.0" stylesheets="@../Design.css" text="Continue">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
@@ -26,7 +26,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="restart" alignment="CENTER" mnemonicParsing="false" onAction="#restart" prefHeight="80.0" prefWidth="150.0" stylesheets="@../Design.css" text="Restart">
+            <Button fx:id="restart" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" onAction="#restart" prefHeight="80.0" prefWidth="150.0" stylesheets="@../Design.css" text="Restart">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
@@ -41,7 +41,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="mainMenu" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#mainMenu" prefHeight="80.0" prefWidth="150.0" stylesheets="@../Design.css" text="Main Menu">
+            <Button fx:id="mainMenu" alignment="CENTER" contentDisplay="TOP" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#mainMenu" prefHeight="80.0" prefWidth="150.0" stylesheets="@../Design.css" text="Main Menu">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
