--- a/src/Views/ly6.fxml
+++ b/src/Views/ly6.fxml
@@ -16,7 +16,7 @@
    <children>
       <VBox alignment="TOP_CENTER" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
          <children>
-            <Label text="Settings" textFill="RED">
+            <Label fx:id="labelSettings" text="Settings">
                <VBox.margin>
                   <Insets top="50.0" />
                </VBox.margin>
@@ -33,14 +33,19 @@
             </Label>
             <MenuButton fx:id="gridSize" mnemonicParsing="false" text="Grid Size">
               <items>
-                <MenuItem fx:id="changeRow" mnemonicParsing="false" text="Row">
+                <MenuItem fx:id="mr" mnemonicParsing="false" text="Row">
                      <graphic>
-                        <Slider min="3.0" />
+                        <Slider fx:id="changeRow" blockIncrement="1.0" majorTickUnit="10.0" max="10.0" min="3.0" minorTickCount="10" onDragDetected="#changeSettings" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="1.0" />
                      </graphic></MenuItem>
-                <MenuItem fx:id="changeColumn" mnemonicParsing="false" text="Column">
+                <MenuItem fx:id="mc" mnemonicParsing="false" text="Column">
                      <graphic>
-                        <Slider min="3.0" />
+                        <Slider fx:id="changeColumn" blockIncrement="1.0" majorTickUnit="10.0" max="10.0" min="3.0" minorTickCount="10" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="1.0" />
                      </graphic></MenuItem>
+                  <MenuItem fx:id="mt" mnemonicParsing="false" text="Tile">
+                     <graphic>
+                        <Slider fx:id="changeTile" blockIncrement="1.0" majorTickUnit="10.0" min="10.0" minorTickCount="10" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="1.0" />
+                     </graphic>
+                  </MenuItem>
               </items>
                <opaqueInsets>
                   <Insets />
@@ -56,7 +61,7 @@
                   </ImageView>
                </graphic>
             </MenuButton>
-            <Button fx:id="apply" mnemonicParsing="false" text="Apply">
+            <Button fx:id="apply" contentDisplay="TOP" mnemonicParsing="false" text="Apply">
                <VBox.margin>
                   <Insets top="20.0" />
                </VBox.margin>
@@ -68,7 +73,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="mainMenu" mnemonicParsing="false" onAction="#mainMenu" text="Main Menu">
+            <Button fx:id="mainMenu" contentDisplay="TOP" mnemonicParsing="false" onAction="#mainMenu" text="Main Menu">
                <VBox.margin>
                   <Insets top="20.0" />
                </VBox.margin>
