--- a/src/Views/ly2.fxml
+++ b/src/Views/ly2.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@../Design.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerGame">
+<AnchorPane fx:id="anchorPane" stylesheets="@../Design.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ControllerGame">
    <children>
       <VBox alignment="TOP_CENTER" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
          <children>
@@ -46,7 +46,7 @@
                   </HBox>
                   <HBox alignment="CENTER_RIGHT">
                      <children>
-                        <VBox prefHeight="200.0" prefWidth="100.0">
+                        <VBox prefHeight="200.0">
                            <children>
                               <HBox prefHeight="100.0" prefWidth="200.0">
                                  <children>
@@ -102,7 +102,7 @@
             </GridPane>
             <HBox alignment="CENTER">
                <children>
-                  <ToggleButton fx:id="bomb" alignment="CENTER" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0">
+                  <ToggleButton fx:id="bomb" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -117,7 +117,7 @@
                         </ImageView>
                      </graphic>
                   </ToggleButton>
-                  <Button fx:id="undo" alignment="CENTER" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0">
+                  <Button fx:id="undo" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
