--- a/src/Views/ly4.fxml
+++ b/src/Views/ly4.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -39,7 +38,10 @@
                   </ImageView>
                </graphic>
             </Label>
-            <Label fx:id="labelScore" text="NUMBER" textFill="WHITE" />
+            <Label fx:id="labelScore" alignment="TOP_CENTER" text="NUMBER" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+               <font>
+                  <Font size="13.0" />
+               </font></Label>
             <GridPane fx:id="gridPane" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
                <VBox.margin>
                   <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
