--- a/src/Views/ly6.fxml
+++ b/src/Views/ly6.fxml
@@ -35,15 +35,15 @@
               <items>
                 <MenuItem fx:id="mr" mnemonicParsing="false" text="Row">
                      <graphic>
-                        <Slider fx:id="changeRow" blockIncrement="1.0" majorTickUnit="10.0" max="10.0" min="3.0" minorTickCount="10" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="1.0" />
+                        <Slider fx:id="changeRow" blockIncrement="1.0" majorTickUnit="1.0" max="10.0" min="3.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" style="-fx-border-color: black; -fx-background-color: black; -fx-background-size: 15;" value="1.0" />
                      </graphic></MenuItem>
                 <MenuItem fx:id="mc" mnemonicParsing="false" text="Column">
                      <graphic>
-                        <Slider fx:id="changeColumn" blockIncrement="1.0" majorTickUnit="10.0" max="10.0" min="3.0" minorTickCount="10" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="1.0" />
+                        <Slider fx:id="changeColumn" blockIncrement="1.0" majorTickUnit="1.0" max="10.0" min="3.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="1.0" />
                      </graphic></MenuItem>
                   <MenuItem fx:id="mt" mnemonicParsing="false" text="Tile">
                      <graphic>
-                        <Slider fx:id="changeTile" blockIncrement="1.0" majorTickUnit="10.0" min="10.0" minorTickCount="10" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="1.0" />
+                        <Slider fx:id="changeTile" blockIncrement="1.0" majorTickUnit="5.0" min="10.0" minorTickCount="10" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="1.0" />
                      </graphic>
                   </MenuItem>
               </items>
